# global-hotkey

./: CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md  renovate.json
.changes/: backquote.md  cmd_or_control.md  config.json  docs.md  down-up-states.md  event-id.md  fix-class-name.md  hash-based-id.md  hotkey-error.md  hotkeys.md  init.md  keyboard-types.md  linux-press-release-order.md  no-op.md  panic-hotkey-from-str.md  readme.md  send-sync-manager-macos.md  try-from.md  un-register-all-perf-linux.md  unregister-all-typo.md  window.md  xlib-wayland.md
.github/workflows/: clippy-fmt.yml  covector-version-or-publish.yml  test.yml
examples/: egui.rs  tao.rs  winit.rs
src/: error.rs  hotkey.rs  lib.rs
src/platform_impl/: mod.rs  no-op.rs
src/platform_impl/macos/: ffi.rs  mod.rs
src/platform_impl/windows/: mod.rs
src/platform_impl/x11/: mod.rs
